src/app/modules/portfolio/components/card/card.component.scss
.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;

    width: 500px;

    text-align: center;
    

    background-color: #120d24;
    -webkit-box-shadow: 10px 10px 6px -7px rgba(150,150,150,0.97);
    -moz-box-shadow: 10px 10px 6px -7px rgba(150,150,150,0.97);
    box-shadow: 10px 10px 6px -7px rgba(150,150,150,0.97);

    img {
        width: 100%;
        max-height: 200px;

        object-position: right;
        object-fit: cover;
        border-radius: 8px 8px 0 0;
    }

    .infoCard {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        padding: 1rem 50px;
        gap: 1rem;

        

        .titleCard {
            color: #FAFAFA;

            font-size: 1.5rem;
        }

        .description {
            width: 100%;

            color: #FAFAFA;
            text-align: justify;
            font-size: 1.25rem;
        }

        .stack {
            color: #FAFAFA;

            font-size: 1.5rem;
        }

        .stackList {
            display: flex;
            align-items: center;
            justify-content: center;
            flex-wrap: wrap;
            gap: 0.5rem;

            li {
                display: inline-block;
                color: #FAFAFA;
                padding: 0.5rem;
                border-radius: 8px;
                background: linear-gradient(#020024, #200838, #502677);
            }
        }
    }
}

@media (max-width: 1020px) {
    .card { 
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 1rem;

        width: 100%;
    }
}

@media (max-width: 750px) {
    .card {
        .infoCard {
            .description {
                font-size: 1rem;
            }
        }
    }
}

